@@ -1,4 +1,7 @@
 2009-06-29
+- fixed bug when active window draged to another desktop
+
+2009-06-29
 - fixed issue 110 and issue 107
 
 2009-06-25
